<resources>
    <string name="app_name">Cash Control</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="text_sign_in">Sign in</string>
    <string name="text_sign_up">Sign up</string>
    <string name="text_username">Username</string>
    <string name="text_password">Password</string>
    <string name="text_reenter_password">Reenter password</string>
    <string name="text_already_have_an_account">Already have an account? - </string>
    <string name="text_dont_have_an_account">Don’t have an account? - </string>
    <string name="text_onboarding_start">We need to learn a little bit about your spending habits and budget.</string>
    <string name="text_onboarding_profile">Let’s create a new profile (don\'t worry, you can change your profile name afterwards)</string>
    <string name="text_onboarding_date_frame">Let\'s choose a starting and ending point.\nThese points represent the dates that you anticipate using to keep track of your expenses (don\'t worry, you can adjust the dates afterwards)</string>
    <string name="text_onboarding_budget">Given the dates, let\'s determine your spending limit and main currency for this time frame (don\'t worry, you can adjust your budget afterwards).</string>
    <string name="text_onboarding_savings">Do you want to make some savings during this time? (This step can be omitted)</string>
    <string name="text_onboarding_finish">We now know that you have a budget of $2,000 for the period of October 1 to October 31 and that you intend to save $100.</string>
    <string name="text_profile_name">Profile name</string>
    <string name="text_give_it_a_name">Give it a name</string>
    <string name="text_how_much_to_save">How much do you want to save?</string>
    <string name="text_step_1">Step 1</string>
    <string name="text_step_2">Step 2</string>
    <string name="text_step_3">Step 3</string>
    <string name="text_next">Next</string>
    <string name="text_previous">Previous</string>
    <string name="text_usd">USD</string>
    <string name="text_income">Income</string>
    <string name="text_expense">Expense</string>
    <string name="text_savings">Savings</string>
    <string name="text_last_transactions">Last transactions</string>
    <string name="text_see_all">See all</string>
    <string name="text_open">Open</string>
    <string name="text_finished">Finished</string>
    <string name="text_add_an_expense">Add an expense</string>
    <string name="text_add_an_income">Add an income</string>
    <string name="text_amount">Amount</string>
    <string name="text_currency">Currency</string>
    <string name="text_today">Today</string>
    <string name="text_custom_date">Custom date</string>
    <string name="text_expenses_made_for">Expense made for</string>
    <string name="text_income_coming_from">Income coming from</string>
    <string name="text_description">Description (optional)</string>
    <string name="text_edit">Edit</string>
    <string name="text_transactions">Transactions</string>
    <string name="text_profiles">Profiles</string>
    <string name="text_settings">Settings</string>
    <string name="text_app_settings">App settings</string>
    <string name="text_profile_settings">Profile settings</string>
    <string name="text_date_frame_settings">Date Frame settings</string>
    <string name="text_total_budget">Total budget</string>
    <string name="text_total_expenses">Total expenses</string>
    <string name="text_total_income">Total income</string>
    <string name="text_total_saved">Total saved</string>
    <string name="text_log_out">Log out</string>
    <string name="text_currency_from">From</string>
    <string name="text_currency_to">To</string>
    <string name="text_bulk">Bulk</string>
    <string name="text_budget">Budget</string>
    <string name="text_update_profile_name">Update profile name</string>
    <string name="text_update_end_point">Update end point</string>
    <string name="text_update_saving">Update saving amount</string>
    <string name="placeholder_text_hello">Hello, %1$s</string>
    <string name="text_onboarding_finish_header_1">Please check that the information you have entered is correct</string>
    <string name="text_onboarding_finish_selected_start_point_date">Selected start point date:</string>
    <string name="text_onboarding_finish_selected_end_point_date">Selected end point date:</string>
    <string name="text_onboarding_finish_budget_entered">Budget entered:</string>
    <string name="text_onboarding_finish_saving_amount">Saving amount:</string>
    <string name="text_no_data">No data</string>
    <string name="text_menu_home">Home</string>
    <string name="text_menu_analytics">Analytics</string>
    <string name="text_menu_date_frames">Date Frames</string>
    <string name="text_menu_news">News</string>
    <string name="text_menu_converter">Converter</string>
    <string name="text_tab_layout_news">News</string>
    <string name="text_tab_layout_search">Search</string>
    <string name="text_tab_layout_saved">Saved</string>
    <string name="text_app_settings_menu_language">Language</string>
    <string name="text_app_settings_menu_theme">Theme</string>
    <string name="text_profile_settings_menu_profile_name">Profile name</string>
    <string name="text_profile_settings_menu_main_currency">Main currency</string>
    <string name="text_profile_settings_menu_end_point">End point</string>
    <string name="text_profile_settings_menu_savings">Savings</string>
    <string name="text_profile_settings_menu_clear_category_history">Clear category history</string>
    <string name="placeholder_text_app_settings_menu_language">English</string>
    <string name="placeholder_text_app_settings_menu_theme">Light</string>
    <string name="placeholder_text_profile_settings_menu_profile_name">Profile 1</string>
    <string name="placeholder_text_profile_settings_menu_main_currency">AZN</string>
    <string name="placeholder_text_profile_settings_menu_end_point">31 October 2023</string>
    <string name="placeholder_text_profile_settings_menu_savings">200 AZN</string>
    <string name="placeholder_text_profile_settings_clear_category_history">* From all profiles</string>
    <string name="text_button_continue">Continue</string>
    <string name="text_button_select_start_point">Select start point</string>
    <string name="text_button_select_end_point">Select end point</string>
    <string name="text_button_start_tracking">Start tracking</string>
    <string name="text_button_add_more">Add more</string>
    <string name="text_button_add">Add</string>
    <string name="text_button_select_a_date">Select a date</string>
    <string name="text_button_save">Save</string>
    <string name="text_button_create_new_profile">Create new profile</string>
    <string name="text_button_change">Change</string>
    <string name="text_button_clear">Clear</string>
    <string name="text_button_convert">Convert</string>
    <string name="text_button_edit">Edit</string>
    <string name="text_button_delete">Delete</string>
    <string name="text_button_return_home">Return home</string>
    <string name="text_button_confirm">Confirm</string>
    <string name="placeholder_text_daily_limit_number">0</string>
    <string name="placeholder_text_currency_AZN">₼</string>
    <string name="placeholder_text_start_point_date">1 October 2023</string>
    <string name="placeholder_text_end_point_date">31 October 2023</string>
    <string name="placeholder_text_current_date">10 October 2023</string>
    <string name="placeholder_text_income">0₼</string>
    <string name="placeholder_text_income_2">342₼</string>
    <string name="placeholder_text_expense">0₼</string>
    <string name="placeholder_text_savings">0₼</string>
    <string name="placeholder_you_have_spent">142</string>
    <string name="placeholder_selected_date">8 October 2023</string>
    <string name="placeholder_currency_converting_from">10 US Dollars =</string>
    <string name="placeholder_currency_converting_to">17 AZN</string>
    <string name="placeholder_currency_converting_rate">1 USD = 1.70196 AZN</string>
    <string name="placeholder_currency_converting_rate_2">1 AZN = 0.587556 USD</string>
    <string name="placeholder_text_last_expenses">Restaurant</string>
    <string name="placeholder_text_last_expense_expense">-50₼</string>
    <string name="placeholder_text_date_frame">%1$s — %2$s</string>
    <string name="placeholder_text_description">- Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</string>
    <string name="placeholder_text_bulk_categories">- Friend\n- Pub</string>
    <string name="placeholder_text_article_title">This trade is where big investors are hiding out amid choppy markets, Goldman Sachs says</string>
    <string name="placeholder_text_author">Author</string>
    <string name="placeholder_text_publish_date">Publish date</string>
    <string name="placeholder_text_profile_name">Profile 1</string>
    <string name="hint_username">Username</string>
    <string name="hint_password">Password</string>
    <string name="hint_budget">Budget</string>
    <string name="hint_saving">200..</string>
    <string name="hint_amount">Amount</string>
    <string name="hint_expense_category">Groceries..</string>
    <string name="hint_income_category">Friend..</string>
    <string name="hint_expense_description">Snacks, butter..</string>
    <string name="hint_income_description">Dept..</string>
    <string name="hint_dots">…</string>
    <string name="hint_search">Search..</string>
    <string name="content_description_delete_icon_item_layout">Delete icon for expense and income category item layout</string>
    <string name="date_picker_title_text_start_point">Select start point</string>
    <string name="date_picker_title_text_end_point">Select end point</string>
    <string name="date_picker_title_text_expense_date">Select expense date</string>
    <string name="date_picker_title_text_income_date">Select income date</string>
    <string name="alert_dialog_positive_yes">Yes</string>
    <string name="alert_dialog_negative_no">No</string>
    <string name="error_message_signin_username_or_pass_wrong">Username or password wrong!</string>
    <string name="error_message_signin_empty_columns">All columns must be filled!</string>
    <string name="error_message_signup_used_username">This username has already been taken!</string>
    <string name="error_message_signup_password_length">The length of password should be longer than 5!</string>
    <string name="error_message_signup_non_macthing_passwords">Passwords are not matching!</string>
    <string name="error_message_signup_empty_columns">All columns must be filled!</string>
    <string name="error_message_onboarding_budget_allowable_min_budget_value">Allowable minimum budget value is 100 units..</string>
    <string name="error_message_onboarding_budget_currency_not_selected">You forgot to select currency..</string>
    <string name="error_message_onboarding_budget_no_budget_info">Consider adding budget information..</string>
    <string name="error_message_onboarding_profile_used_profile_name">This profile name has already been taken!</string>
    <string name="error_message_onboarding_profile_no_profile_name_added">Consider adding profile name</string>
    <string name="error_message_onboarding_dateframe_year_gap_not_allowed">Year gap is not allowed..</string>
    <string name="error_message_onboarding_dateframe_unappropriate_dateframe">The date frame is not appropriate! The date for the start point should be less than end point.</string>
    <string name="error_message_onboarding_savings_exceeded_budget">The value of savings cannot exceed the budget!</string>
    <string name="error_message_onboarding_finish_already_existed_dateframe">This profile already has such a date frame with same currency!</string>
</resources>